# PDAL-julia

./: .gitignore  LICENCE.txt  Manifest.toml  Project.toml  README.md  benchmark.sh  build.sh  build_sys.jl
.github/workflows/: dockerimage.yml
PdalJulia/: Manifest.toml  Project.toml
examples/: DevHarness.jl  Example1.jl  Example2.jl  Example3.jl
jl/: Import.jl  PdalJulia.jl  Wrapper.jl
pdal/: CMakeCache.txt  CMakeLists.txt  julia_filter_test
pdal/cmake/: macros.cmake
pdal/filters/: JuliaFilter.cpp  JuliaFilter.hpp
pdal/jlang/: Invocation.cpp  Invocation.hpp  Script.cpp  Script.hpp
pdal/test/: JuliaFilterTest.cpp  Support.cpp  Support.hpp  TestConfig.hpp
pdal/test/data/: from-module.json  standalone-julia.jl  test1.jl
scripts/docker/alpine/: Dockerfile
